refactor: 重命名项目为AI Search
- 将项目名从 cloudflare-autorag 改为 aisearch
- 将Worker名从 autorag-worker 改为 aisearch
- 更新所有文档和代码中的相关引用：
  * AutoRAG → AI Search
  * AUTO_RAG_API_URL → AI_SEARCH_API_URL
  * autoRagRequest → aiSearchRequest
- 更新前端标题为 'AI Search 智能搜索'
- 保持所有功能和配置不变，仅更新命名

部署后的Worker URL将是：
https://aisearch.your-subdomain.workers.dev

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutoRAG 查询界面</title>
+    <title>AI Search 智能搜索</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>AutoRAG 智能搜索</h1>
+        <h1>AI Search 智能搜索</h1>
         <div class="search-container">
             <textarea id="queryInput" placeholder="输入您的问题..."></textarea>
             <button id="submitBtn">提交查询</button>
